--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
-theme: jekyll-theme-dinky
 title: Andreale's homepage
 description: Hello, world!
+remote_theme: pages-themes/dinky@v0.2.0
+plugins:
+- jekyll-remote-theme
